# google-calendar-rsvp

./: .gitignore  Cargo.toml  Makefile  README.md  TODO
doc/: google-calendar-rsvp.1  google-calendar-rsvp.1.txt
src/: main.rs
