[package]
name = "google-calendar-rsvp"
version = "0.0.1"
edition = "2018"

[dependencies]
exitcode = "1.1.2"
google-calendar3 = "2.0.4+20210327"
home = "0.5.3"
hyper = "0.14.7"
hyper-rustls = "0.22.1"
serde_json = "1.0.64"
tokio = { version = "1.6.0", features = ["rt-multi-thread"] }
yup-oauth2 = "5.1.0"
