[package]
name = "google-calendar-rsvp"
version = "0.0.1"
edition = "2018"

[dependencies]
anyhow = "1.0.40"
base64 = "0.13.0"
chrono = "0.4.19"
exitcode = "1.1.2"
google-calendar3 = "2.0.4+20210327"
hyper = "0.14.7"
hyper-rustls = "0.22.1"
mailparse = "0.13.4"
regex = "1.5.4"
serde_json = "1.0.64"
tokio = { version = "1.6.0", features = ["rt-multi-thread"] }
xdg = "2.2.0"
yup-oauth2 = "5.1.0"
